test/corpus/declarations.txt
=====
Declarations
=====

%{
  let message =
    let id x = x in
  id "coucou"
%}
%parameter<Module.SIG>
%token Add Mul
%token<string> Uident Lident
%nonassoc Uminus
%left Add "valid_quid]]]"
%right Arrow
%type<'a Ast.expr> expr
%start program file ö_øÐ
%start<Ast.t> program file
%attribute actual [@hey]
%[@ho haha]
%on_error_reduce a b c

%%
---

(source_file
  (declaration (header (ocaml)))
  (declaration (type (ocaml_type)))
  (declaration (terminal_alias_attrs (uid)) (terminal_alias_attrs (uid)))
  (declaration (type (ocaml_type)) (terminal_alias_attrs (uid)) (terminal_alias_attrs (uid)))
  (declaration (priority_keyword) (symbol (uid)))
  (declaration (priority_keyword) (symbol (uid)) (symbol (qid)))
  (declaration (priority_keyword) (symbol (uid)))
  (declaration (type (ocaml_type)) (strict_actual (symbol (lid))))
  (declaration (non_terminal (lid)) (non_terminal (lid)) (non_terminal (lid)))
  (declaration (type (ocaml_type)) (non_terminal (lid)) (non_terminal (lid)))
  (declaration (strict_actual (symbol (lid))) (attribute (ocaml)))
  (declaration (grammar_attribute (ocaml)))
  (declaration (strict_actual (symbol (lid)))
               (strict_actual (symbol (lid)))
               (strict_actual (symbol (lid)))))
